--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mnemonist": "^0.39.5",
     "object-hash": "^3.0.0",
     "path": "^0.12.7",
+    "ratex-sdk": "^2.0.1",
     "sha.js": "^2.4.11",
     "sha256": "^0.2.0",
     "ts-node": "^10.9.1",
@@ -35,5 +36,6 @@
     "@types/object-hash": "^3.0.6",
     "@types/web3": "^1.2.2",
     "typescript": "^5.5.4"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
